* $wgAllowUserSkin (deprecated in 1.16) has now been removed
* $wgExtraRandompageSQL (deprecated in 1.16) has now been removed
* LogReader and LogViewer classes (deprecated in 1.14) have now been removed
* (bug 26033) Added $wgArticleCountMethod to select the method to use to say
  whether a page is an article or not. $wgUseCommaCount is now deprecated.

=== New features in 1.19 ===
* (bug 28916) A way to to toggle mw.config legacy globals settings from
  LocalSettings.php has been created by introducing $wgLegacyJavaScriptGlobals.
* (bug 28503) Support for ircs:// URL protocols
* (bug 26033) It is now possible to count all non-redirect pages in content
  namespaces as articles
* Images can now be embedded in an XML dump stream using backupDump.php
  --include-files and can be imported using importDump.php --uploads;
  furthermore, it can import files from the filesystem using --image-base-path
* Three new hooks in Special:Undelete, 'UndeleteForm::showHistory',
  'UndeleteForm::showRevision' and 'UndeleteForm::undelete', so that extensions
  may override the usage of PageArchive class and replace it with their own
  class that extends PageArchive.
* (bug 28915) Implement QUnit test suite for MediaWiki JavaScript.
  Also built-in support for distribution through a TestSwarm instance.
* (bug 29036) For cascade-protected pages, the mw-textarea-cprotected class is
  added to the textarea on the edit form.
* mw.util.getScript has been implemented (like wfScript in GlobalFunctions.php)
* (bug 29067) Creating "user.tokens" module (like user.options) in ResourceLoader.

=== Bug fixes in 1.19 ===
* (bug 10154) Don't allow user to specify days beyond $wgRCMaxAge.
* (bug 28868) Show total pages in the subtitle of an image on the
  file description page for multi-paged documents.
* (bug 28883) Message names for different compression types commonly
  used in Tiff files.
* When translcuding a special page, do not let it interpret url parameters.