@@ -9,6 +9,7 @@ $wgExtensionCredits['other'][] = array(
 );
 
 $wgHooks['MediaWikiPerformAction'][] = 'efCreativeCommonsRdfPreformAction';
+$wgHooks['BeforePageDisplay'][] = 'efCreativeCommonsRdfBeforePageDisplay';
 
 $wgAutoloadClasses['CreativeCommonsRdf'] = $dir . 'CreativeCommonsRdf_body.php';
 
@@ -20,4 +21,20 @@ function efCreativeCommonsRdfPreformAction( $output, $article, $title, $user, $r
 	$rdf = new CreativeCommonsRdf( $article );
 	$rdf->show();
 	return false;
+}
+
+/**
+ * @param $out OutputPage
+ * @param $skin Skin
+ * @return bool
+ */
+function efCreativeCommonsRdfBeforePageDisplay( $out, $skin ) {
+	$out->addHeadItem( 'creativecommons',
+						Html::element( 'link', array(
+							'rel' => $out->getMetadataAttribute(),
+							'title' => 'Creative Commons',
+							'type' => 'application/rdf+xml',
+							'href' => $out->getTitle()->getLocalURL( 'action=creativecommons' ) )
+						));
+	return true;
 }
