@@ -18,6 +18,10 @@ production.
 * LogReader and LogViewer classes (deprecated in 1.14) have now been removed
 * (bug 26033) Added $wgArticleCountMethod to select the method to use to say
   whether a page is an article or not. $wgUseCommaCount is now deprecated.
+* $wgEnableDublinCoreRdf and $wgEnableCreativeCommonsRdf no longer work in core,
+  and the functionality has been moved to the relevant extensions. See
+  http://www.mediawiki.org/wiki/Extension:DublinCoreRdf and
+  http://www.mediawiki.org/wiki/Extension:CreativeCoreRdf as appropriate
 
 === New features in 1.19 ===
 * (bug 28916) A way to to toggle mw.config legacy globals settings from
